# encuadrado-demo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  up  up.bat
.github/: pull_request_template.md
.github/workflows/: code-validation.yml
backend/: .prospector.yaml  manage.py  pyproject.toml
backend/db/: dump.json
backend/marketplace/: admin.py  models.py  serializers.py  urls.py  views.py
backend/marketplace/management/commands/: populate_customers_and_payments.py
backend/marketplace/migrations/: 0001_create_Customer.py  0002_create_ContentDownload_EventRegistration.py  0003_remove_customer_password.py
backend/model/: admin.py  models.py
backend/model/management/commands/: populate_dummy_data.py  populate_events_and_content.py
backend/model/migrations/: 0001_create_Event_DigContent_Discount.py
backend/model/tests/: test_event.py
backend/showcase/: asgi.py  settings.py  urls.py  wsgi.py
backend/showcase/management/commands/: dump_db.py  load_db.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  api.js
frontend/src/pages/: ContentDetail.jsx  EventDetail.jsx  Store.jsx
